--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2745,28 +2745,30 @@
                             <p> Use C:/Users/Documents/xyz.xlsx or C:\\Users\\Documents\\xyz.extensions while giving the path in the variable.</p>
 
                             <h5>2. Loops and Conditions</h5>
-                            <p><span class="numbers">1.</span> Use IF ELSE actions to implement business logic and Loops to iterate. Use Jump Statements and infinite loops if necessary.</p>
+                            <p> Use IF ELSE actions to implement business logic and Loops to iterate. Use Jump Statements and infinite loops if necessary.</p>
                             <h5>3. Frame:</h5>
-                            <p><span class="numbers">1.</span> While capturing the XPath of any element, make sure to check whether they are within the Iframes or PopUp.</p>
+                            <p> While capturing the XPath of any element, make sure to check whether they are within the Iframes or PopUp.</p>
                             <h5>4. Excel actions:</h5>
-                            <p><span class="numbers">1.</span> Use only .xlsx files for Excel automation. </p>
-                            <p><span class="numbers">2.</span> Make sure the Excel workbook is closed before executing the script. </p>
-                            <p><span class="numbers">3.</span> If the given sheet name is not available in the excel workbook, a new sheet with the given name will be created while using the write actions.</p>
+                            <p> Use only .xlsx files for Excel automation. </p>
+                            <p> Make sure the Excel workbook is closed before executing the script. </p>
+                            <p> If the given sheet name is not available in the excel workbook, a new sheet with the given name will be created while using the write actions.</p>
+
                             <h5>5. Capturing an image or location of the element:</h5>
-                            <p><span class="numbers">1.</span> While capturing the image/location of the element, ensure that the middle point of the selector should be on the element where e-worker needs to click.</p>
-                            <p><span class="numbers">2.</span> The screen scaling should be 100%.<p>
-                            <p><span class="numbers">3.</span> The location coordinates will work only in the same resolution and scaling while executing in any environment.</p>
-                            <p><span class="numbers">4.</span> For example, observe the below image.</p>
+                            <p> While capturing the image/location of the element, ensure that the middle point of the selector should be on the element where e-worker needs to click.</p>
+                            <p> The screen scaling should be 100%.<p>
+                            <p> The location coordinates will work only in the same resolution and scaling while executing in any environment.</p>
+                            <p> For example, observe the below image.</p>
                             <img src="{{ '/assets/images/doc-img86.png' | relative_url }}"alt="image" class="topImg" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+
                             <h5>6. Exception Handling:</h5>
-                            <p><span class="numbers">1.</span> Avoid using multiple stages for global level exception handling. </p>
+                            <p> Avoid using multiple stages for global level exception handling. </p>
                             <h5>7. Files & Folders:</h5>
-                            <p><span class="numbers">1.</span> While using the write file action, if the given file is not available, a new file with the given name will be created automatically in the specified path. </p>
+                            <p> While using the write file action, if the given file is not available, a new file with the given name will be created automatically in the specified path. </p>
                             <h5>8. Outlook:</h5>
-                            <p><span class="numbers">1.</span> While using the Outlook action make sure that the Outlook Application is closed. Using Close App action before using the outlook actions in the flow is recommended.  </p>
-                            <p><span class="numbers">2.</span> Make sure the attached file used in Send mail action is available in the mentioned path/location.</p>
+                            <p> While using the Outlook action make sure that the Outlook Application is closed. Using Close App action before using the outlook actions in the flow is recommended.  </p>
+                            <p> Make sure the attached file used in Send mail action is available in the mentioned path/location.</p>
                             <h5>9. Get Credentials/ Get Secret:</h5>
-                            <p><span class="numbers">1.</span> Make sure that you store your sensitive data in the secret vault and access the data using these actions. </p>
+                            <p> Make sure that you store your sensitive data in the secret vault and access the data using these actions. </p>
 
                             <h5>Benefits of Techforce.ai Studio Upgraded version </h5>
                             <p>1.	Maintaining the logs of Action Flows.</p>
