--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -556,7 +556,7 @@
                                       <a href="#AboutTechForce" class="heading"><span class="numbers"></span>About Techforce.ai</a>
                                   </li>
                                   <li class="subMenu">
-                                      <a href="#GetStarted" class="heading"><span class="numbers"></span>Get Started</a>
+                                      <a href="#GetStarted" class="heading"><span class="numbers"></span>Getting Started</a>
                                   </li>
                                   <li class="subMenu">
                                       <a href="#ReleaseNotes" class="heading"><span class="numbers"></span> Release Notes</a>
