--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -976,11 +976,11 @@
                              </ol>
                              <h5>Download Techforce.ai RPA Studio:</h5>
                              <p>1. To download the studio, the user must register with the e-manager console.</p>
-                             <p>2. To get access to the e-manager console, go to <a  target="_blank" href="https://emcaws.Techforce.ai/try/signup?subscriptionId=0">https://emcaws.Techforce.ai/try/signup?subscriptionId=0 </a> and submit the details.</p>
+                             <p>2. To get access to the e-manager console, go to <a  target="_blank" href="https://emanager.Techforce.ai/try/signup?subscriptionId=0">https://emanager.Techforce.ai/try/signup?subscriptionId=0</a> and submit the details.</p>
                              <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
                              <p>3. Upon successful registration, you will be redirected to the login page.</p>
                              <img src="{{ '/assets/images/doc-img113.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
-                              <p>4.	You will be prompted to verify your email on the first login.</p>
+                             <p>4. You will be prompted to verify your email on the first login.</p>
 
                              <img src="{{ '/assets/images/doc-img114.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                               <p>5.	 Go to your registered email and click on the verification link to complete the email verification process.</p>
@@ -994,8 +994,8 @@
                              <h5>Installing RPA Studio</h5>
                              <ol>
                              <li><span class="numbers">1.</span> After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
-                             <li><span class="numbers">2.</span> Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges</li>
-                             <p>The following image is an example of how to run as an administrator.</p>
+                             <li><span class="numbers">2.</span> Double-click on the installer to start the installation.</li>
+
                              <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Installation Instruction-1 </strong></p>
                              <li><span class="numbers">3.</span> Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click YES, and the installation process will start.</li>
@@ -1010,21 +1010,28 @@
                              <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Installation Instruction-4</strong></p>
 
-                             <li><span class="numbers">7.</span> The installation will take some time, and after installing the Studio, click on CLOSE button to continue for further process</li>
+                             <li><span class="numbers">7.</span> The installation will take some time, and after installing the Studio, click on CLOSE button.</li>
                              <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Installation Instruction-5</strong></p>
+                             <li><span class="numbers">8.</span>After completing the installation user can see the Techforce.ai RPA studio Icon on the desktop.</li>
+                             <img src="{{ '/assets/images/doc-img121.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Installation Instruction-6</strong></p>
                              </ol>
                           </div>
 
                           <div id="InstallingTechForceOCR"  class="page-section">
+                            <h4>Post Installation Steps:</h4>
                               <h4 class="purple"><span class="numbers"></span>  Installing Techforce.ai OCR</h4>
+                            <p>Installing techforce.ai OCR depends on User requirement.</p>
+                            <p>User can find the techforce.ai OCR.exe in the given location: “C:\Techforce\Techforce.ai Studio\resources\static\tesseract-ocr-w64-setup-v4.0.0.20181030.exe”</p>
                             <p>Techforce.ai OCR needs 164MB of hard disk space for installation.</p>
                             <ol>
-                            <li><span class="numbers">1.</span> In the first screen of Techforce.ai OCR installation, select preferred language, and click “OK” which will start the installation of Techforce.ai OCR.</li>
-                             <img src="{{ '/assets/images/doc-img6.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;" >
-                              <p style="text-align:center;"><strong>Figure: Installing Techforce.ai OCR-1</strong></p>
-                            <li><span class="numbers">2.</span> In the next screen of OCR installation, click NEXT to continue the installation process.</li>
-
+                            <li><span class="numbers">1.</span> Double click on “tesseract-ocr-w64-setup-v4.0.020181.03.exe”.</li>
+                            <img src="{{ '/assets/images/doc-img6.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;" >
+                              <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-1</strong></p>
+                            <li><span class="numbers">2.</span> In the first screen of Techforce.ai OCR installation, select preferred language, and click “OK” which will start the installation of Techforce.ai OCR.</li>
+                            <img src="{{ '/assets/images/doc-img122.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                              <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-1</strong></p>
                             <li><span class="numbers">3.</span> Accept the license agreement of Techforce.ai OCR to continue the installation process.</li>
                             <img src="{{ '/assets/images/doc-img7.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-2</strong></p>
@@ -1043,6 +1050,21 @@
                             <img src="{{ '/assets/images/doc-img11.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure:  Installing Techforce.ai OCR-6 </strong></p>
                             </ol>
+
+
+                          <h4>Using Microsoft Edge with Techforce.ai:</h4>
+                          <ol>
+                          <li><span class="numbers">1.</span> To use Microsoft Edge Browser in the Open webpage action.</li>
+                          <img src="{{ '/assets/images/doc-img123.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                          <p style="text-align:center;"><strong>Figure:  ME1 </strong></p>
+                          <p><span class="numbers">2.</span> The user should open the command prompt with administrator privileges.</p>
+                          <img src="{{ '/assets/images/doc-img124.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                          <p style="text-align:center;"><strong>Figure: ME2</strong></p>
+                          <p><span class="numbers">3.</span> Run the following command: DISM.exe /Online /Add-Capability /CapabilityName:Microsoft.WebDriver~~~~0.0.1.0</p>
+                          <img src="{{ '/assets/images/doc-img125.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                          <p style="text-align:center;"><strong>Figure: ME3</strong></p>
+                          <p><span class="numbers">4.</span> Click on enter and the command starts executing. It takes a few seconds, and then can see the success message. This process is a onetime task.</p>
+                          </ol>
                          </div>
 
                          <div id="Un-installInstructions"  class="page-section">
@@ -1175,10 +1197,10 @@
                           </div>
                           <div id="Settings"  class="page-section">
                             <h5 class="green"> Settings</h5>
-                            <p>Used to set the global wait time of the flow and basic Chrome dimensions.</p>
+                            <p>Used to set the global wait time for the action flows.</p>
                             <img src="{{ '/assets/images/doc-img26.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure 12: Settings</strong></p>
-                            <p>Also, it asks Chrome should open or close at the time of exception and at the time of flow completion.</p>
+                            <p>Also, it asks Chrome should open or close at the time of flow completion.</p>
                             <img src="{{ '/assets/images/doc-img27.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;border:1px solid green;margin-left:30%;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure 13:  Global Settings</strong></p>
                           </div>
@@ -2353,13 +2375,13 @@
 
 
                           <div id="Enterprise-managerconsole"  class="page-section">
-                              <h3><span class="numbers">4.</span> Enterprise Manager Console</h3>
+                              <h3>Enterprise Manager Console</h3>
                           </div>
 
                             <div id="Registerwith"  class="page-section">
                               <h4 class="skyBlue"> Register with E-Manager Console</h4>
 
-                              <p>1. To get access to the e-manager console, goto <a  target="_blank" href="https://emcaws.Techforce.ai/try/signup?subscriptionId=0">https://emcaws.Techforce.ai/try/signup?subscriptionId=0 </a> and submit the details.</p>
+                              <p>1. To get access to the e-manager console, goto <a  target="_blank" href="https://emanager.Techforce.ai/try/signup?subscriptionId=0 ">https://emanager.Techforce.ai/try/signup?subscriptionId=0 </a> and submit the details.</p>
                               <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Details </strong></p>
                               <p><span class="numbers">2.</span> Upon successful registration, you will be redirected to the login page.</p>
@@ -2377,7 +2399,7 @@
                            <div id="Login"  class="page-section">
                              <h4 class="skyBlue"> Login</h4>
                                <p>1. To Login into e-manager console</p>
-                               <img src="{{ '/assets/images/doc-img48.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
                                <p>2. Enter the credentials and click on the login button, you can see Action flows, e-worker machines, Queues, Schedules, and Secret Vault in the left menu.</p>
                                <p>3. The action flows tab shows the list of action flows published to the e-manager console.</p>
@@ -2552,6 +2574,10 @@
                           <p>1. The billing section shows your current plan and options available for upgrading.</p>
                           <img src="{{ '/assets/images/doc-img118.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p style="text-align:center;"><strong>Figure: Billing Details</strong></p>
+                          <h5>Update Password:</h5>
+                          <p>1. To update the login password click on the Update password button and a mail will be sent to the registered mail id.</p>
+                          <img src="{{ '/assets/images/doc-img126.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                          <p style="text-align:center;"><strong>Figure: Update Password</strong></p>
                         </div>
 
                         <div id="Notifications"  class="page-section">
@@ -2562,7 +2588,7 @@
                         </div>
 
                           <div id="Worker"  class="page-section">
-                            <h3 style="text-transform:none"><span class="numbers">5.</span> E-Worker Machine</h3>
+                            <h3 style="text-transform:none"><span class="numbers"></span> E-Worker Machine</h3>
                           </div>
 
                            <div id="RuntimeInstallation"  class="page-section">
@@ -2729,7 +2755,7 @@
                             <h5>11. Problems are common</h5>
                             <p> You are not alone facing the problems/issues. Developers are likely to encounter some seemingly “insurmountable” problems during the development stage. It is highly likely that someone else has encountered the same problem and found a solution for it.</p>
                             <p> Check out for the solution in the Techforce.ai forum using the following URL:</p>
-                            <a target="_blank" href="forum.Techforce.ai">forum.Techforce.ai</a>
+                            <a target="_blank" href="https://forum.techforce.ai/">https://forum.techforce.ai/</a>
                             <h5>12. Couldn't find the solution yet?</h5>
                             <p> Don't worry. The expert team of Techforce.ai will guide you on how to solve the problem. Post your question in Forum. </p>
                             <h5>13. Dos & Dont’s</h5>
