--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -997,7 +997,7 @@
                              <li><span class="numbers">2.</span> Double-click on the installer to start the installation.</li>
 
                              <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Installation Instruction-1 </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Installation Instruction-1 </strong></p>
                              <li><span class="numbers">3.</span> Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click YES, and the installation process will start.</li>
                              <li><span class="numbers">4.</span> Accept the license agreement of Techforce.ai to proceed for the further installation process.</li>
                              <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
@@ -2755,7 +2755,7 @@
                             <h5>11. Problems are common</h5>
                             <p> You are not alone facing the problems/issues. Developers are likely to encounter some seemingly “insurmountable” problems during the development stage. It is highly likely that someone else has encountered the same problem and found a solution for it.</p>
                             <p> Check out for the solution in the Techforce.ai forum using the following URL:</p>
-                            <a target="_blank" href="https://forum.techforce.ai/">https://forum.techforce.ai/</a>
+                            <a target="_blank" href="forum.techforce.ai/">forum.techforce.ai/</a>
                             <h5>12. Couldn't find the solution yet?</h5>
                             <p> Don't worry. The expert team of Techforce.ai will guide you on how to solve the problem. Post your question in Forum. </p>
                             <h5>13. Dos & Dont’s</h5>
