--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2755,7 +2755,7 @@
                             <h5>11. Problems are common</h5>
                             <p> You are not alone facing the problems/issues. Developers are likely to encounter some seemingly “insurmountable” problems during the development stage. It is highly likely that someone else has encountered the same problem and found a solution for it.</p>
                             <p> Check out for the solution in the Techforce.ai forum using the following URL:</p>
-                            <a target="_blank" href="forum.techforce.ai">forum.techforce.ai</a>
+                            <a target="_blank" href="https://forum.techforce.ai/">forum.techforce.ai</a>
                             <h5>12. Couldn't find the solution yet?</h5>
                             <p> Don't worry. The expert team of Techforce.ai will guide you on how to solve the problem. Post your question in Forum. </p>
                             <h5>13. Dos & Dont’s</h5>
