--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2401,11 +2401,11 @@
                                <p>1. To Login into e-manager console</p>
                                <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
-                               <p>2. Enter the credentials and click on the login button, you can see Action flows, e-worker machines, Queues, Schedules, and Secret Vault in the left menu.</p>
+                               <p>2. Enter the credentials and click on the login button, you can see Action flows, E-Worker Machines, Queues, Schedules, and Secret Vault in the left menu.</p>
                                <p>3. The action flows tab shows the list of action flows published to the e-manager console.</p>
                                <img src="{{ '/assets/images/doc-img119.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Action Flow Tab </strong></p>
-                               <p>4. The e-worker machine tab lists the machines registered with the e-manager console. It contains the required runtime to execute the action flows that are published to the e-manager console.</p>
+                               <p>4. The E-Worker Machine tab lists the machines registered with the e-manager console. It contains the required runtime to execute the action flows that are published to the e-manager console.</p>
                                <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: E-Worker Machines Tab </strong></p>
                                <p>5. The Queues tab shows the current and pending tasks waiting for the execution in the e-worker machines.</p>
@@ -2437,7 +2437,7 @@
                           <div id="WorkerManagement"  class="page-section">
                             <h4 class="skyBlue"> Worker Management</h4>
                             <h5>Worker Management:</h5>
-                            <p>1. The main functionality of an e-worker machine is to execute the flows that are uploaded on the Action Flows page. So, after adding the e-worker machine, while executing the flows, select the e-worker machine that was created.</p>
+                            <p>1. The main functionality of an E-Worker Machine is to execute the flows that are uploaded on the Action Flows page. So, after adding the e-worker machine, while executing the flows, select the e-worker machine that was created.</p>
                             <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: E-Worker Machine Screen</strong></p>
                             <p>After creating an e-worker machine, the details of the e-worker machine - like name, host, and so on - can be seen.</p>
@@ -2446,9 +2446,9 @@
                             <h5>E-Worker Machine Categories:</h5>
                             <p>1. The worker category is the type of e-worker machine that is going to be registered. Currently, only the “Reserved” type can be created.</p>
                             <h5>Reserved:</h5>
-                            <p>1. If an e-worker machine is created as “Reserved” then the flows can be executed only on that machine.</p>
+                            <p>1. If an E-Worker Machine is created as “Reserved” then the flows can be executed only on that machine.</p>
                             <h5>Creating an E-Worker Machine:</h5>
-                            <p>1. This is the e-worker machine screen before the action flows execution environment is created.</p>
+                            <p>1. This is the E-Worker Machine screen before the action flows execution environment is created.</p>
                             <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: E-Worker Machine Screen </strong></p>
                             <p><span class="numbers">2.</span>  To create an e-worker machine, open the Techforce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
@@ -2575,7 +2575,7 @@
                           <img src="{{ '/assets/images/doc-img118.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p style="text-align:center;"><strong>Figure: Billing Details</strong></p>
                           <h5>Update Password:</h5>
-                          <p>1. To update the login password click on the Update password button and a mail will be sent to the registered mail id.</p>
+                          <p>1. To update the login password click on the Update password button and an email will be sent to the registered email id.</p>
                           <img src="{{ '/assets/images/doc-img126.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
                           <p style="text-align:center;"><strong>Figure: Update Password</strong></p>
                         </div>
